WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93116
Fixed positioned elements with percentage height or width do not get layed out correctly on orientation change
https://bugs.webkit.org/show_bug.cgi?id=93116
Summary
Fixed positioned elements with percentage height or width do not get layed ou...
edbaker
Reported
2012-08-03 07:19:45 PDT
The actual height or width of fixed position elements using a percentage value needs to be recalculated after the fixed reported size is changed. As the fixed reported size is used in the calculation of the actual height or width.
Attachments
Patch
(2.05 KB, patch)
2012-08-03 07:43 PDT
,
edbaker
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
edbaker
Comment 1
2012-08-03 07:43:31 PDT
Created
attachment 156380
[details]
Patch
Antonio Gomes
Comment 2
2012-08-08 07:30:38 PDT
It has not landed.
WebKit Review Bot
Comment 3
2012-08-08 07:41:57 PDT
Comment on
attachment 156380
[details]
Patch Clearing flags on attachment: 156380 Committed
r125036
: <
http://trac.webkit.org/changeset/125036
>
WebKit Review Bot
Comment 4
2012-08-08 07:42:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug