[BlackBerry] Add relayout after updating fixed reported size https://bugs.webkit.org/show_bug.cgi?id=93116 PR #160059

Patch by Ed Baker <edbaker@rim.com> on 2012-08-08
Reviewed by Antonio Gomes.

Reviewed internally by Antonio Gomes.

On an orientation change and after fixed reported size is
updated perform a layout and update the fixed elements after
scrolling. This will recalculate the height and width of
fixed position elements using percentage values with the
new fixed reported size. Otherwise using the old fixed reported
size in the new orientation overflowing or clipping could occur.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::setViewportSize):

Canonical link: https://commits.webkit.org/111344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125036 268f45cc-cd09-0410-ab3c-d52691b4dbfc